Finished frontend. Added confirmation modals for delete/edit operations on both tables. Added link to navbar for review
