# BuildABear.Backend/Controllers/AuthorizationController.cs
@@ -39,4 +39,12 @@ public class AuthorizationController : ControllerBase // The controller must inh
         return this.FromServiceResponse(await _userService.Register(form));
         //return this.FromServiceResponse(await _userService.Login(login with { Password = PasswordUtils.HashPassword(login.Password) })); // The "with" keyword works only with records and it creates another object instance with the updated properties. 
     }
+
+    [HttpPost] // This attribute will make the controller respond to a HTTP POST request on the route /api/Authorization/Login having a JSON body deserialized as a LoginDTO.
+    public async Task<ActionResult<RequestResponse>> RegisterVendorUser([FromBody] VendorUserRegisterDTO form) // The FromBody attribute indicates that the parameter is deserialized from the JSON body.
+    {
+        form.Password = PasswordUtils.HashPassword(form.Password);
+        return this.FromServiceResponse(await _userService.RegisterVendor(form));
+        //return this.FromServiceResponse(await _userService.Login(login with { Password = PasswordUtils.HashPassword(login.Password) })); // The "with" keyword works only with records and it creates another object instance with the updated properties. 
+    }
 }
