# BuildABear.Core/DataTransferObjects/VendorUserRegisterDTO.cs
@@ -1,0 +1,7 @@
+﻿
+namespace BuildABear.Core.DataTransferObjects;
+
+public class VendorUserRegisterDTO : UserAddDTO
+{
+    public string VendorEmail { get; set; } = default!;
+}
